Add keycloak integration as auth server